# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  11 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now traps interrupt signals and rolls back its status to what
    it was when before it started.

    bonding module now supports space seperated and array variables, #118590.

  10 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Removed runlevel dependancies from runscript.sh as they're now in rc.
    
    runscript.sh now has much better locking, #118418.

    We now store services to restart when we end up as inactive from a restart
    or we were stopped with IN_BACKGROUND=true, #112088.

    We no longer stop and start services already running on runlevel change if
    they're in the runlevel we're changing too.

    We can now wait_sevice on services started outside of rc.

    rc-status now reports "Could not locate" instead of "Could not local",
    thanks to Christian Heim.

  09 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Ensure that specific configuration is loaded after net, #118368.

    iwconfig now supports multiple iwconfig_* and iwpriv_* statements and is
    also configurable for specific ESSIDs. This allows use to use the inbuilt
    WPA support in the rt2500 driver.

    module-loader now loads interface specific configuration files, #118366.

  07 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Save a few CPU cycles by storing add_suffix in variable.

  06 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Use ${DEFAULTLEVEL} if ${SOFTLEVEL} is boot, shutdown, reboot or single
    in add_suffix.

    Sync style changes in functions.sh

    Critical services now load a suffixed config and fail gracefully.

  05 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    iproute deletes addresses again, fixes #117799.

    dhclient now supports dhclient-enter-hooks, #117763.

* baselayout-1.12.0_pre13 (04 Jan 2006)
