@@ -8,6 +8,9 @@
 
     bonding module now supports space seperated and array variables, #118590.
 
+    start-stop-daemon now waits for upto 1 second if it returns 0 and we
+    don't have a valid process.
+
   10 Jan 2006; Roy Marples <uberlord@gentoo.org>:
 
     Removed runlevel dependancies from runscript.sh as they're now in rc.
